--- a/DynamicExample/earth.in
+++ b/DynamicExample/earth.in
@@ -27,7 +27,7 @@ dPrecA 232.63352803778562
 
 #_______poise parameters (have fun with these!)_________________________________________
 iLatCellNum      151                    #number of latitude cells
-bClimateModel     sea                   #use seasonal or annual model
+sClimateModel     sea                   #use seasonal or annual model
 dTGlobalInit      14.85                 #initial guess at average surface temp 
 iNumYears         4                     #number of years (orbits) to run clim model
 iNStepInYear 80                         #number of steps to take in a "year"
