--- a/DynamicCases/CaseA/GDwarf/earth.in
+++ b/DynamicCases/CaseA/GDwarf/earth.in
@@ -66,7 +66,7 @@ dMixingDepth      70                    #mixing depth of ocean
 
 #________output options!_____________________________________________
 saOutputOrder    Time PrecA -TGlobal AlbedoGlobal -FluxOutGlobal $
-  -TotIceMass -TotIceFlow -TotIceBalance DeltaTime AreaIceCov Snowball Obliq Ecce
+  -TotIceMass -TotIceFlow -TotIceBalance DeltaTime AreaIceCov Snowball Obliq Ecce COPP
 saGridOutput     Time -Latitude -TempLat AlbedoLat -AnnInsol -FluxIn -FluxOut IceMass -IceHeight DIceMassDt $
   -IceFlow -BedrockH -TempMaxLat -TempMinLat -FluxMerid -DivFlux 
 
