--- a/StaticCases/GDwarf/WarmStart/vspace.in
+++ b/StaticCases/GDwarf/WarmStart/vspace.in
@@ -1,12 +1,12 @@
-srcfolder .
-destfolder GDwarf_exp10000
-trialname  semi_obl
+sSrcFolder .
+sDestFolder GDwarf_WarmStart
+sTrialName  semi_obl
 
-file   sun.in
+sBodyFile   sun.in
 dLuminosity 3.846e26
 
-file   earth.in
+sBodyFile   earth.in
 dObliquity [0, 90, n100] obl
 dSemi [0.83,1.07,n100]
 
-file   vpl.in
+sPrimaryFile   vpl.in
