--- a/StaticCases/KDwarf/ColdStart/bpl.in
+++ b/StaticCases/KDwarf/ColdStart/bpl.in
@@ -1,5 +1,5 @@
-sDestFolder GDwarf_WarmStart
-sBigplanetFile GDwarf_WarmStart.bpa
+sDestFolder KDwarf_ColdStart
+sBigplanetFile KDwarf_ColdStart.bpa
 sOutputFile Test.bpf
 
 
